# curso-em-video-python-mundo1

./: .breakpoints  .replit  README.md  adivinhacaoGame.py  analisadorDeNomes.py  analisandoTriangulos.py  analiseDeNome.py  anoBissexto.py  anotacoes.txt  anotaçõesDeManipulacaoDeTexto.py  antecessorESucessor.py  buscadorDeSTR.py  calculandoAumentoSalarial.py  calculandoDescontos.py  calculandoValorDeAluguelDeCarro.py  catetosEHipotenusa.py  conversorDeMedidas.py  conversorDeMoedas.py  conversorDeTemperaturas.py  dissecandoUmaVariavel.py  filtrandoPalavras.py  inputAndPrint.py  localizaLetra.py  maiorEMenor.py  mediaAritimetica.py  multiplos.py  parOuImpar.py  pintandoAParede.py  precoPorDistancia.py  pyproject.toml  quebrandoNumero.py  radareletronico.py  senCosTag.py  separandoNumero.py  somandoDoisNumeros.py  sorteandoUmaLista.py  sorteioDeAlunos.py  tabuada.py  testeDeCores.py  tocandoMP3.py  (+1 more)
